--- a/apps/qa_dashboard_web/lib/qa_dashboard_web/templates/layout/root.html.leex
+++ b/apps/qa_dashboard_web/lib/qa_dashboard_web/templates/layout/root.html.leex
@@ -11,14 +11,11 @@
   </head>
   <body>
     <header>
+      <%= if @current_user do %>
+      <%= @current_user.email %>
+      <% end %>
       <section class="container">
         <nav role="navigation">
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-            <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
-              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
-            <% end %>
-          </ul>
           <%= render "_user_menu.html", assigns %>
         </nav>
       </section>
