--- a/apps/qa_dashboard_web/lib/qa_dashboard_web/templates/layout/_user_menu.html.eex
+++ b/apps/qa_dashboard_web/lib/qa_dashboard_web/templates/layout/_user_menu.html.eex
@@ -1,11 +1,24 @@
-<ul>
-<%= if @current_user do %>
-  <li><%= @current_user.email %></li>
-  <li><%= link "IngestTokens", to: Routes.user_ingest_token_path(@conn, :index) %></li>
-  <li><%= link "Settings", to: Routes.user_settings_path(@conn, :edit) %></li>
-  <li><%= link "Log out", to: Routes.user_session_path(@conn, :delete), method: :delete %></li>
-<% else %>
-  <li><%= link "Register", to: Routes.user_registration_path(@conn, :new) %></li>
-  <li><%= link "Log in", to: Routes.user_session_path(@conn, :new) %></li>
-<% end %>
-</ul>
+<div class="container">
+  <div class="navbar">
+    <ul>
+      <li><%= link "Home", to: Routes.page_path(@conn, :index) %></li>
+      <%= if @current_user do %>
+      <li ><%= link "Settings", to: Routes.user_settings_path(@conn, :edit) %></li>
+      <li ><%= link "IngestTokens", to: Routes.user_ingest_token_path(@conn, :index) %></li>
+      <li ><%= link "Organizations", to: Routes.organization_path(@conn, :index)%></li>
+      <li ><%= link "Roles", to: Routes.role_path(@conn, :index) %></li>
+      <li ><%= link "Organization Roles", to: Routes.organization_role_path(@conn, :index) %></li>
+      <li ><%= link "Organization User Roles", to: Routes.organization_user_role_path(@conn, :index) %></li>
+      <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
+      <li><%= link "Live Dashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
+      <% end %>
+      <li ><%= link "Log out", to: Routes.user_session_path(@conn, :delete), method: :delete %></li>
+      <% else %>
+      <li ><%= link "Register", to: Routes.user_registration_path(@conn, :new) %></li>
+      <li ><%= link "Log in", to: Routes.user_session_path(@conn, :new) %></li>
+      <% end %>
+    </ul>
+
+  </div>
+</div>
+
